@@ -15,6 +15,8 @@
 	Thanks Narayana Pattipati <narayana.pattipati@wipro.com>
 	* modules/smb-method.c: Fix server cache access for IPC$ shares.
 	* modules/smb-method.c: Allow authentication with an empty password.
+	* modules/smb-method.c: Try 'guest' login instead of blank for 
+	compatibility with certain SMB configurations.
 	
 2005-02-11  Christian Kellner  <gicmo@gnome.org>
 
